<resources>
    <string name="app_name">GMAPS</string>
    <string name="maps_c">Maps C</string>
    <string name="App_Name">Maps C</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usericon">userIcon</string>
    <string name="search_location">Search Location</string>
    <string name="location_name">Location Name</string>
    <string name="location_body">Location Body</string>
    <string name="API_KEY">AIzaSyCZHuBNjY8UvPUw2hTmqTsyjCcKEH6o5NE</string>
    <string name="search_title">Title</string>
    <string name="searchbody">searchBody</string>
    <string name="locatemeBtn">locateMe</string>
    <string name="navigatebtn">NavigateBtn</string>
    <string name="nearbyplacesimages">nearByPlacesImages</string>
    <string name="images">Images</string>
    <string name="nearbyplaces">NearByPlaces:</string>
    <string name="search_nearby_places">Search NearBy Places</string>
    <string name="navigation">Navigation</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="turn_left">Turn Left</string>
    <string name="street_name">Street Name</string>


    <string-array name="listOfPlacesTypes">
        <item>accounting</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>atm</item>
        <item>bakery</item>
        <item>bank</item>
        <item>bar</item>
        <item>beauty_salon</item>
        <item>bicycle_store</item>
        <item>book_store</item>
        <item>bowling_alley</item>
        <item>bus_station</item>
        <item>cafe</item>
        <item>campground</item>
        <item>car_dealer</item>
        <item>car_rental</item>
        <item>car_repair</item>
        <item>car_wash</item>
        <item>casino</item>
        <item>cemetery</item>
        <item>church</item>
        <item>city_hall</item>
        <item>clothing_store</item>
        <item>convenience_store</item>
        <item>courthouse</item>
        <item>dentist</item>
        <item>department_store</item>
        <item>doctor</item>
        <item>drugstore</item>
        <item>electrician</item>
        <item>electronics_store</item>
        <item>embassy</item>
        <item>fire_station</item>
        <item>florist</item>
        <item>funeral_home</item>
        <item>furniture_store</item>
        <item>gas_station</item>
        <item>gym</item>
        <item>hair_care</item>
        <item>hardware_store</item>
        <item>hindu_temple</item>
        <item>home_goods_store</item>
        <item>hospital</item>
        <item>insurance_agency</item>
        <item>jewelry_store</item>
        <item>laundry</item>
        <item>lawyer</item>
        <item>library</item>
        <item>light_rail_station</item>
        <item>liquor_store</item>
        <item>local_government_office</item>
        <item>locksmith</item>
        <item>lodging</item>
        <item>meal_delivery</item>
        <item>meal_takeaway</item>
        <item>mosque</item>
        <item>movie_rental</item>
        <item>movie_theater</item>
        <item>moving_company</item>
        <item>museum</item>
        <item>night_club</item>
        <item>painter</item>
        <item>park</item>
        <item>parking</item>
        <item>pet_store</item>
        <item>pharmacy</item>
        <item>physiotherapist</item>
        <item>plumber</item>
        <item>police</item>
        <item>post_office</item>
        <item>primary_school</item>
        <item>real_estate_agency</item>
        <item>restaurant</item>
        <item>roofing_contractor</item>
        <item>rv_park</item>
        <item>school</item>
        <item>secondary_school</item>
        <item>shoe_store</item>
        <item>shopping_mall</item>
        <item>spa</item>
        <item>stadium</item>
        <item>storage</item>
        <item>store</item>
        <item>subway_station</item>
        <item>supermarket</item>
        <item>synagogue</item>
        <item>taxi_stand</item>
        <item>tourist_attraction</item>
        <item>train_station</item>
        <item>transit_station</item>
        <item>travel_agency</item>
        <item>university</item>
        <item>veterinary_care</item>
        <item>zoo</item>
    </string-array>
</resources>