<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/val_15dp"
        app:cardCornerRadius="@dimen/val_10dp"
        app:cardElevation="@dimen/val_8dp"
    android:id="@+id/nearByPlaceLayout"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/val_200dp"
                android:id="@+id/listOfImages"
                android:scaleType="centerCrop"
                android:contentDescription="@string/images" />

            <TextView
                android:id="@+id/nearByPlaceTitle"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/val_5dp"
                android:paddingRight="@dimen/val_10dp"
                android:paddingLeft="@dimen/val_10dp"
                android:paddingBottom="@dimen/val_5dp"
                android:text="@string/location_name"
                android:layout_height="wrap_content"
                android:textSize="@dimen/val_14sp"
                android:textColor="?attr/colorPrimary"
                android:fontFamily="@font/poppins_bold"/>

            <RatingBar
                android:layout_width="@dimen/val_100dp"
                android:layout_height="wrap_content"
                android:id="@+id/nearByPlaceRatings"
                android:paddingLeft="@dimen/val_10dp"
                android:paddingRight="@dimen/val_10dp"
                style="?android:attr/ratingBarStyleSmall"/>


            <TextView
                android:id="@+id/nearByPlaceDescription"
                android:layout_width="match_parent"
                android:padding="@dimen/val_10dp"
                android:lines="2"
                android:ellipsize="end"
                android:textSize="@dimen/val_14sp"
                android:text="@string/location_body"
                android:fontFamily="@font/poppins_medium"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>