<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mapNavigation"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".fragments.NavigationViewActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/val_34sp"
        android:layout_marginEnd="@dimen/val_20dp"
        android:layout_marginStart="@dimen/val_20dp"
        android:layout_marginTop="@dimen/val_10dp"
        android:text="@string/navigation"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/val_10dp"
        android:layout_marginStart="@dimen/val_20dp"
        android:layout_marginEnd="@dimen/val_20dp"
        android:layout_marginBottom="@dimen/val_20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cardViewLayout">


            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:elevation="@dimen/val_10dp"
                android:gravity="center"
                android:id="@+id/bottomVal"
                android:layout_marginStart="@dimen/val_10dp"
                android:layout_marginTop="@dimen/val_10dp"
                android:layout_marginEnd="@dimen/val_10dp"
                android:layout_marginBottom="@dimen/val_10dp"
                android:background="@drawable/bottom_navigation_background"
                android:orientation="vertical"
                android:weightSum="10"
                android:padding="@dimen/val_10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/DistanceDetails"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/distanceValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="@dimen/val_20sp" />

                        <TextView
                            android:id="@+id/durationTaken"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="?attr/colorOnPrimaryContainer"
                            android:textSize="@dimen/val_18sp" />

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/startNavigationBtn"
                        android:layout_width="@dimen/val_40dp"
                        android:layout_height="@dimen/val_40dp"
                        app:cardCornerRadius="@dimen/val_10dp"
                        app:cardElevation="@dimen/val_2dp"
                        android:backgroundTint="?attr/colorPrimary">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="@dimen/val_10dp"
                            android:src="@drawable/navigation_ic"
                            app:tint="@color/white"
                            android:contentDescription="@string/navigatebtn" />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/navigationDetails"
                    android:visibility="gone"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="10"
                        android:gravity="center"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/turn_left"
                            android:layout_weight="10"
                            android:fontFamily="@font/poppins_bold"
                            android:textColor="?attr/colorPrimary"
                            android:id="@+id/instructionValue"
                            android:textSize="@dimen/val_24sp"/>

                        <ImageView
                            android:layout_width="@dimen/val_40dp"
                            android:layout_height="@dimen/val_40dp"
                            android:id="@+id/instructionImage"
                            android:padding="@dimen/val_10dp"
                            android:contentDescription="@string/navigatebtn"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/street_name"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/val_18sp" />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>